# thrift-nicejson

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  NiceJSON.cpp  NiceJSON.h  README.asciidoc  README.md  ThriftThrift.cpp  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  configure.scan  cpp_typelib_plugin.cpp  jsontest.cpp  libtool  test.thrift  test1.cpp  thrift_thrift.thrift  wirejson_plugin.cpp
autom4te.cache/: output.0  output.2  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
docs/: building-ocaml-support.asciidoc  building-other-languages.adoc  building-other-languages.asciidoc  building-python-support.asciidoc  faq.asciidoc  thrift-tutorial-example.asciidoc  tutorial.asciidoc
lib/: Makefile  NiceJSON.cpp  NiceJSON.h  ns_utils.cpp  ns_utils.h  ns_utils_test.cpp
plugins/: Makefile  cpp_typelib_plugin.cpp
src/examples/cpp/: .gitignore  CppClient.cpp  CppServer.cpp  Makefile.am  Makefile.in
src/examples/ocaml/: CalcClient.ml  CalcServer.ml  Makefile.am  Makefile.in
src/examples/py/: Makefile.am  Makefile.in  PythonClient.py  PythonServer.py
src/gtest/: .gitignore  Makefile.am  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.in  NiceJSON.cpp  NiceJSON.h  ns_utils.h
src/lib/cpp/: .gitignore  Makefile.am  Makefile.in  NiceJSON.cpp  NiceJSON.h  TNiceJSONProtocol.cpp  TNiceJSONProtocol.h  iatest.cpp  json.hpp  jsontest.cpp
src/lib/ocaml/: .gitignore  Makefile.am  Makefile.in  TBytesTransport.ml  TBytesTransport.mli  nicejson-ffi.idl  nicejson.ml  nicejson_intf.cc  nicejson_intf.h
src/lib/py/: Makefile.am  Makefile.in  nicejson.cpp  nicejson_test.py  setup.py  thrift_nicejson.cpp  visit_zoo.py  zoo.cpp
src/lib/py/src/: NiceJSON.py  TNiceJSONProtocol.py
src/plugins/: Makefile.am  Makefile.in  typelib_plugin.cpp
src/plugins/cpp/: Makefile.am  Makefile.in  ns_utils_test.cpp  typelib_plugin.cpp
src/plugins/ocaml/: .gitignore  Makefile.am  Makefile.in  thrift-gen-ocamltypelib.ml
src/test/: Makefile  Makefile.am  Makefile.in
src/test/cpp/: Makefile.am  Makefile.in  test.thrift  test0.thrift  test1.cpp  test2.cpp  test3.cpp
src/test/ocaml/: Makefile.am  Makefile.in  SerDes.ml  nicejson_tests.ml
src/test/py/: Makefile.am  Makefile.in  test1.py
src/tools/cpp/: .gitignore  Makefile.am  Makefile.in  dump-binary-serialized.cpp
src/tools/ocaml/: .gitignore  ConvertPlugin.ml  Makefile.am  Makefile.in  dump-binary-serialized.ml  misc.ml  thrift-gen-newtypelib.ml
test/: Makefile  test.thrift  test1.cpp
